Заготовка для форм

--- a/src/index.html
+++ b/src/index.html
@@ -373,31 +373,62 @@
 			<div class="faq__inner">
 				<h2 class="faq__headline headline">Самые частые вопросы</h2>
 				<div class="faq__questions">
-					<div class="faq__item">
-						<p class="faq__quest">А вдруг мне не понравится результат?</p>
+					<article class="faq__item">
+						<h3 class="faq__quest">А вдруг мне не понравится результат?</h3>
 						<button class="faq__btn"><span class="visually-hidden">Показать текст</span><i></i></button>
 						<p class="faq__answer">Оставьте заявку — вам позвонит менеджер и ответит на все вопросы.
 						После этого надо заполнить анкету-бриф и оплатить заказ. Ваш личный менеджер проверит бриф и задаст уточняющие вопросы. После этого бриф еще раз проверяет арт-директор, и, если у нее нет вопросов, отправляет ваш заказ в отдел дизайна. Под руководством арт-директора дизайнеры делают ваш заказ и на 14 день ваш личный менеджер презентует вам стиль.</p>
-					</div>
-					<div class="faq__item">
-						<p class="faq__quest">Как проходит работа?</p>
+					</article>
+					<article class="faq__item">
+						<h3 class="faq__quest">Как проходит работа?</h3>
 						<button class="faq__btn"><span class="visually-hidden">Показать текст</span><i></i></button>
 						<p class="faq__answer">Оставьте заявку — вам позвонит менеджер и ответит на все вопросы.
 						После этого надо заполнить анкету-бриф и оплатить заказ. Ваш личный менеджер проверит бриф и задаст уточняющие вопросы. После этого бриф еще раз проверяет арт-директор, и, если у нее нет вопросов, отправляет ваш заказ в отдел дизайна. Под руководством арт-директора дизайнеры делают ваш заказ и на 14 день ваш личный менеджер презентует вам стиль.</p>
-					</div>
-					<div class="faq__item">
-						<p class="faq__quest">Как оплатить заказ?</p>
+					</article>
+					<article class="faq__item">
+						<h3 class="faq__quest">Как оплатить заказ?</h3>
 						<button class="faq__btn"><span class="visually-hidden">Показать текст</span><i></i></button>
 						<p class="faq__answer">Оставьте заявку — вам позвонит менеджер и ответит на все вопросы.
 						После этого надо заполнить анкету-бриф и оплатить заказ. Ваш личный менеджер проверит бриф и задаст уточняющие вопросы. После этого бриф еще раз проверяет арт-директор, и, если у нее нет вопросов, отправляет ваш заказ в отдел дизайна. Под руководством арт-директора дизайнеры делают ваш заказ и на 14 день ваш личный менеджер презентует вам стиль.</p>
-					</div>
-					<div class="faq__item">
-						<p class="faq__quest">А можно поучаствовать в процессе дизайна?</p>
+					</article>
+					<article class="faq__item">
+						<h3 class="faq__quest">А можно поучаствовать в процессе дизайна?</h3>
 						<button class="faq__btn"><span class="visually-hidden">Показать текст</span><i></i></button>
 						<p class="faq__answer">Оставьте заявку — вам позвонит менеджер и ответит на все вопросы.
 						После этого надо заполнить анкету-бриф и оплатить заказ. Ваш личный менеджер проверит бриф и задаст уточняющие вопросы. После этого бриф еще раз проверяет арт-директор, и, если у нее нет вопросов, отправляет ваш заказ в отдел дизайна. Под руководством арт-директора дизайнеры делают ваш заказ и на 14 день ваш личный менеджер презентует вам стиль.
 						</p>
+					</article>
+				</div>
+			</div>
+		</section>
+		<section class="callback">
+			<div class="callback__inner">
+				<div class="callback__request">
+					<h2 class="callback__headline headline">Оставьте заявку</h2>
+					<p class="callback__descr">Мы всегда с удовольствием делимся своим опытом и знаниями. 
+					Расскажите нам о своем проекте, пожалуйста. Один из наших менеджеров свяжется с Вами в кратчайшие сроки и подготовит оптимальное предложение.</p>
+					<form action="#" class="form">
+						<div class="form__field">
+							<label class="form__name form__name--active" for="input__name">Ваше имя</label>
+							<input class="input" id="input__name" type="text">
+						</div>
+					</form>
+				</div>
+				<div class="callback__contacts contacts">
+					<div class="contacts__banner">
+						<p class="contacts__name">Дизайн-подразделение</p>
+						<address class="contacts__tel">+7 499 999 88 88</address>
+						<adress class="contacts__mail">hello@berezkastudio.ru</adress>
 					</div>
+					<div class="contacts__banner">
+						<p class="contacts__name">Отдел разработки и продвижения</p>
+						<address class="contacts__tel">+7 499 999 88 88</address>
+						<adress class="contacts__mail">hello@berezkastudio.ru</adress>
+					</div>
+					<address class="contacts__banner contacts__banner--address">
+						г. Москва, Ленинградский проспект, д. 80, 
+						к. 16, 3 подъезд, 3 этаж, офис 309
+					</address>
 				</div>
 			</div>
 		</section>
