Секция с формой без проверки

--- a/src/index.html
+++ b/src/index.html
@@ -434,7 +434,7 @@
 						<address class="contacts__tel">+7 499 999 88 88</address>
 						<adress class="contacts__mail">hello@berezkastudio.ru</adress>
 					</div>
-					<div class="contacts__banner">
+					<div class="contacts__banner contacts__banner--middle">
 						<p class="contacts__name">Отдел разработки и продвижения</p>
 						<address class="contacts__tel">+7 499 999 88 88</address>
 						<adress class="contacts__mail">hello@berezkastudio.ru</adress>
