Все готово кроме адаптива и пару скриптов

--- a/src/index.html
+++ b/src/index.html
@@ -447,6 +447,9 @@
 			</div>
 		</section>
 	</main>
+	<footer class="footer">
+		<p class="footer__year">&copy; 2018</p>
+	</footer>
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 	<script src="js/jquery.min.js"></script>
 
