Маска для формы

--- a/src/index.html
+++ b/src/index.html
@@ -414,7 +414,7 @@
 						</label>
 						<label class="form__field form__field--must">
 							<span class="form__name">Телефон</span>
-							<input class="input" type="tel" name="phone">
+							<input class="input" id="phone" type="tel" name="phone">
 						</label>
 						<label class="form__field form__field--must">
 							<span class="form__name">Email</span>
@@ -452,7 +452,7 @@
 	</footer>
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 	<script src="js/jquery.min.js"></script>
-
+	<script src="js/maskedtel.js"></script>
 	<script src="js/slick.min.js"></script>
 
 	<script src="js/main.js"></script>
