Стрелки для слайдера

--- a/src/index.html
+++ b/src/index.html
@@ -352,8 +352,18 @@
 							<p class="feed-item__step-content">Вы оставляете заявку на сайте. <br>
 							С вами связывается менеджер, обсуждает детали проекта, и делает рассчет всех работ.</p>
 						</div>
-						<div class="feed-item__slide"></div>
-						<div class="feed-item__slide"></div>
+						<div class="feed-item__slide">
+							<span class="feed-item__number">02</span>
+							<h4 class="feed-item__step-name">Оценка стоимости работ</h4>
+							<p class="feed-item__step-content">Вы оставляете заявку на сайте. <br>
+							С вами связывается менеджер, обсуждает детали проекта, и делает рассчет всех работ.</p>
+						</div>
+						<div class="feed-item__slide">
+							<span class="feed-item__number">03</span>
+							<h4 class="feed-item__step-name">Оценка стоимости работ</h4>
+							<p class="feed-item__step-content">Вы оставляете заявку на сайте. <br>
+							С вами связывается менеджер, обсуждает детали проекта, и делает рассчет всех работ.</p>
+						</div>
 					</div>
 				</div>
 				<div class="feed-item feed-item--reviews">
@@ -363,8 +373,14 @@
 							<p class="feed-item__review-content">Я обратился в студию Березка для разработки логотипа своей кондитерской, я очень рад, что в этом важном этапе мне помогали именно вы. Мне предложили сразу несколько достойных вариантов, поэтому определиться с выбором не составило труда. Спасибо за профессиональный подход, сделали все четко и быстро, в наши дни это бесценно!!</p>
 							<p class="feed-item__author">Кондитреский дом «Алексей Алутнин»</p>
 						</div>
-						<div class="feed-item__item"></div>
-						<div class="feed-item__item"></div>
+						<div class="feed-item__item">
+							<p class="feed-item__review-content">Я обратился в студию Березка для разработки логотипа своей кондитерской, я очень рад, что в этом важном этапе мне помогали именно вы. Мне предложили сразу несколько достойных вариантов, поэтому определиться с выбором не составило труда. Спасибо за профессиональный подход, сделали все четко и быстро, в наши дни это бесценно!!</p>
+							<p class="feed-item__author">Кондитреский дом «Алексей Алутнин»</p>
+						</div>
+						<div class="feed-item__item">
+							<p class="feed-item__review-content">Я обратился в студию Березка для разработки логотипа своей кондитерской, я очень рад, что в этом важном этапе мне помогали именно вы. Мне предложили сразу несколько достойных вариантов, поэтому определиться с выбором не составило труда. Спасибо за профессиональный подход, сделали все четко и быстро, в наши дни это бесценно!!</p>
+							<p class="feed-item__author">Кондитреский дом «Алексей Алутнин»</p>
+						</div>
 					</div>
 				</div>
 			</div>
