Объеденил все в одну библиотеку

--- a/src/index.html
+++ b/src/index.html
@@ -467,9 +467,7 @@
 		<p class="footer__year">&copy; 2018</p>
 	</footer>
 	<script src='https://www.google.com/recaptcha/api.js'></script>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/maskedtel.js"></script>
-	<script src="js/slick.min.js"></script>
+	<script src="js/libs.js"></script>
 
 	<script src="js/main.js"></script>
 </body>
