Исправил небольшие недочеты

--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,7 @@
 						<p class="price__name">Создание лого<br> или фирменного стиля</p>
 						<div class="price__faq">
 							<div class="price__descr descr">
-								<h3 class="descr__headline">Интернет-реклама</h3>
+								<h3 class="descr__headline">Создание лого</h3>
 								<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
 								<h4 class="descr__price-list-head">Стоимость</h4>
 								<ul class="descr__price-list">
@@ -219,7 +219,7 @@
 						<p class="price__name">Создание рекламных материалов </p>
 						<div class="price__faq">
 							<div class="price__descr descr">
-								<h3 class="descr__headline">Интернет-реклама</h3>
+								<h3 class="descr__headline">Создание рекламных материалов</h3>
 								<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
 								<h4 class="descr__price-list-head">Стоимость</h4>
 								<ul class="descr__price-list">
@@ -244,7 +244,7 @@
 						<p class="price__name">Создание сайта (лендинг, сайт визитка, магазин)</p>
 						<div class="price__faq">
 							<div class="price__descr price__descr--corner descr">
-								<h3 class="descr__headline">Интернет-реклама</h3>
+								<h3 class="descr__headline">Создание сайта</h3>
 								<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
 								<h4 class="descr__price-list-head">Стоимость</h4>
 								<ul class="descr__price-list">
@@ -269,7 +269,7 @@
 						<p class="price__name">Настройка и ведение рекламы в интернете</p>
 						<div class="price__faq">
 							<div class="price__descr descr">
-								<h3 class="descr__headline">Интернет-реклама</h3>
+								<h3 class="descr__headline">Настройка и ведение рекламы в интернете</h3>
 								<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
 								<h4 class="descr__price-list-head">Стоимость</h4>
 								<ul class="descr__price-list">
@@ -294,7 +294,7 @@
 						<p class="price__name">SEO-продвижение</p>
 						<div class="price__faq">
 							<div class="price__descr descr">
-								<h3 class="descr__headline">Интернет-реклама</h3>
+								<h3 class="descr__headline">SEO-продвижение</h3>
 								<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
 								<h4 class="descr__price-list-head">Стоимость</h4>
 								<ul class="descr__price-list">
@@ -319,7 +319,7 @@
 						<p class="price__name">Поддержка сайта</p>
 						<div class="price__faq">
 							<div class="price__descr price__descr--corner descr">
-								<h3 class="descr__headline">Интернет-реклама</h3>
+								<h3 class="descr__headline">Поддержка сайта</h3>
 								<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
 								<h4 class="descr__price-list-head">Стоимость</h4>
 								<ul class="descr__price-list">
