Простая проверка для форм

--- a/src/index.html
+++ b/src/index.html
@@ -434,7 +434,7 @@
 						</label>
 						<label class="form__field form__field--must">
 							<span class="form__name">Email</span>
-							<input class="input" type="email" name="email">
+							<input class="input" type="text" name="email">
 						</label>
 						<label class="form__field form__field--last">
 							<span class="form__name">Сообщение</span>
