--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/normalize.min.css">
-	<link rel="stylesheet" href="css/slick.min.css">
+	<link rel="stylesheet" href="css/libs.css">
 	<link rel="stylesheet" href="css/fonts.css">
 
 	<link rel="stylesheet" href="css/style.css">
