--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,9 @@
 	<header class="header">
 		<h1 class="visually-hidden">BerezkaStudio Company</h1>
 		<div class="header__inner">
-			<nav class="menu">
+			<nav class="header__menu menu">
 				<h2 class="visually-hidden">Главная навигация по сайту</h2>
+				<button class="menu__mobile"><span class="visually-hidden">Открыть меню</span></button>
 				<ul class="menu__list">
 					<li class="menu__item"><a class="menu__link" href="#">Компетенции</a></li>
 					<li class="menu__item"><a class="menu__link" href="#">Проекты</a></li>
