--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,11 @@
 				<button class="menu__mobile"><span class="visually-hidden">Открыть меню</span></button>
 				<ul class="menu__list">
 					<li class="menu__item"><a class="menu__link" href="#">Компетенции</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">Проекты</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">Стоимость</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">Этапы и отзывы</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">Частые вопросы</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">Контакты</a></li>
+					<li class="menu__item"><a class="menu__link" href="#projects">Проекты</a></li>
+					<li class="menu__item"><a class="menu__link" href="#price">Стоимость</a></li>
+					<li class="menu__item"><a class="menu__link" href="#steps">Этапы и отзывы</a></li>
+					<li class="menu__item"><a class="menu__link" href="#faq">Частые вопросы</a></li>
+					<li class="menu__item"><a class="menu__link" href="#contacts">Контакты</a></li>
 				</ul>
 			</nav>
 			<address class="menu__phone"><a class="phone" href="tel:+79526684422">+7 (952) 668-44-22</a></address>
@@ -100,7 +100,7 @@
 		</section>
 		<section class="projects">
 			<div class="projects__inner">
-				<header class="projects__header">
+				<header class="projects__header" id="projects">
 					<h2 class="projects__headline">Проекты выполненные нашей командой
 					<br> лучшее подтверждение её компетенций и опыта</h2>
 					<p class="projects__descr">Мы занимаемся созданием сайтов, брендингом, рекламой<br> и развиваем проекты в digital.</p>
@@ -180,7 +180,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="price">
+		<section class="price" id="price">
 			<div class="price__inner">
 				<header class="price__header">
 					<h2 class="headline price__headline">Cтоимость комплекса услуг</h2>
@@ -341,7 +341,7 @@
 				</ul>
 			</div>
 		</section>
-		<section class="feedback">
+		<section class="feedback" id="steps">
 			<h2 class="visually-hidden">Отзывы и этапы работы</h2>
 			<div class="feedback__inner">
 				<div class="feed-item feed-item--steps">
@@ -386,7 +386,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="faq">
+		<section class="faq" id="faq">
 			<div class="faq__inner">
 				<h2 class="faq__headline headline">Самые частые вопросы</h2>
 				<div class="faq__questions">
@@ -418,7 +418,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="callback">
+		<section class="callback" id="contacts">
 			<div class="callback__inner">
 				<div class="callback__request">
 					<h2 class="callback__headline headline">Оставьте заявку</h2>
@@ -467,6 +467,7 @@
 	<footer class="footer">
 		<p class="footer__year">&copy; 2018</p>
 	</footer>
+	<button class="page__scroll"><span class="visually-hidden">Наверх</span></button>
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 	<script src="js/libs.js"></script>
 
