--- a/src/index.html
+++ b/src/index.html
@@ -424,7 +424,7 @@
 					<h2 class="callback__headline headline">Оставьте заявку</h2>
 					<p class="callback__descr">Мы всегда с удовольствием делимся своим опытом и знаниями. 
 					Расскажите нам о своем проекте, пожалуйста. Один из наших менеджеров свяжется с Вами в кратчайшие сроки и подготовит оптимальное предложение.</p>
-					<form action="#" class="form">
+					<form action="index.html" class="form">
 						<label class="form__field form__field--must">
 							<span class="form__name">Ваше имя</span>
 							<input class="input" type="text" name="name">
@@ -480,7 +480,7 @@
 						</label>
 						<label class="form__field form__field--must">
 							<span class="form__name">Email</span>
-							<input class="input input--modal" type="text" name="email">
+							<input class="input input--modal" id="" type="text" name="email">
 						</label>
 						<label class="form__field form__field--last">
 							<span class="form__name">Сообщение</span>
