--- a/src/index.html
+++ b/src/index.html
@@ -424,7 +424,7 @@
 					<h2 class="callback__headline headline">Оставьте заявку</h2>
 					<p class="callback__descr">Мы всегда с удовольствием делимся своим опытом и знаниями. 
 					Расскажите нам о своем проекте, пожалуйста. Один из наших менеджеров свяжется с Вами в кратчайшие сроки и подготовит оптимальное предложение.</p>
-					<form method="POST" class="form">
+					<form class="form">
 						<label class="form__field form__field--must">
 							<span class="form__name">Ваше имя</span>
 							<input class="input" type="text" name="name">
@@ -469,7 +469,7 @@
 	</footer>
 	<button class="page__scroll"><span class="visually-hidden">Наверх</span></button>
 	<div class="modal">
-		<form method="POST" class="modal__form form">
+		<form class="modal__form form">
 						<label class="form__field form__field--must">
 							<span class="form__name">Ваше имя</span>
 							<input class="input input--modal" type="text" name="name">
