--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 				<h2 class="visually-hidden">Главная навигация по сайту</h2>
 				<button class="menu__mobile"><span class="visually-hidden">Открыть меню</span></button>
 				<ul class="menu__list">
-					<li class="menu__item"><a class="menu__link" href="#">Компетенции</a></li>
+					<li class="menu__item"><a class="menu__link" href="#stats">Компетенции</a></li>
 					<li class="menu__item"><a class="menu__link" href="#projects">Проекты</a></li>
 					<li class="menu__item"><a class="menu__link" href="#price">Стоимость</a></li>
 					<li class="menu__item"><a class="menu__link" href="#steps">Этапы и отзывы</a></li>
@@ -63,7 +63,7 @@
 			</div>
 		</section>
 		<!-- stats - statistics -->
-		<section class="stats">
+		<section class="stats" id="stats">
 			<div class="stats__inner">
 				<div class="stats__content">
 					<h2 class="headline">В цифрах о нас</h2>
