--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
 				<header class="price__header">
 					<h2 class="headline price__headline">Cтоимость комплекса услуг</h2>
 					<p class="price__text">Предлагаем Вас ознакомится со стоимостью услуг на рекламу при открытии собственного дела.   Мы поможем Вам определить смету и сроки создания вашего логотипа, фирменного стиля, <br>веб-ресурса, а также последующего продвижения и сопровождения Вашего бизнеса. </p>
-					<p class="price__text price__text--action">Вам нужно только <a class="price__call-to-action" href="#">отправить нам заявку.</a></p>
+					<p class="price__text price__text--action">Вам нужно только <a class="price__call-to-action" href="#price">отправить нам заявку.</a></p>
 				</header>
 				<ul class="price__list">
 					<li class="price__item">
