--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/libs.css">
 	<link rel="stylesheet" href="css/fonts.css">
 
@@ -441,7 +441,7 @@
 							<span class="form__name">Сообщение</span>
 							<input class="input" type="text" name="message">
 						</label>
-						<div class="g-recaptcha" data-sitekey="6LeQclYUAAAAAG5R7zbRyrK3DdreAqkMFaLaeKCB"></div>
+						<div class="g-recaptcha" data-sitekey="6LcKEFcUAAAAAO3kDqbGPJuoCvI9TCcnjH52HQdZ"></div>
 						<button class="form__btn btn btn--form">Отправить заявку</button>
 					</form>
 				</div>
@@ -486,7 +486,7 @@
 							<span class="form__name">Сообщение</span>
 							<input class="input input--modal" type="text" name="message">
 						</label>
-						<div class="g-recaptcha" data-sitekey="6LeQclYUAAAAAG5R7zbRyrK3DdreAqkMFaLaeKCB"></div>
+						<div class="g-recaptcha" data-sitekey="6LcKEFcUAAAAAO3kDqbGPJuoCvI9TCcnjH52HQdZ"></div>
 						<button class="form__btn btn btn--form">Отправить заявку</button>
 						<span class="modal__close"><span class="visually-hidden">Закрыть окно</span></span>
 		</form>
