--- a/src/index.html
+++ b/src/index.html
@@ -98,9 +98,9 @@
 				</div>
 			</div>
 		</section>
-		<section class="projects">
+		<section class="projects" id="projects">
 			<div class="projects__inner">
-				<header class="projects__header" id="projects">
+				<header class="projects__header">
 					<h2 class="projects__headline">Проекты выполненные нашей командой
 					<br> лучшее подтверждение её компетенций и опыта</h2>
 					<p class="projects__descr">Мы занимаемся созданием сайтов, брендингом, рекламой<br> и развиваем проекты в digital.</p>
