--- a/src/index.html
+++ b/src/index.html
@@ -442,7 +442,7 @@
 							<input class="input" type="text" name="message">
 						</label>
 						<div class="g-recaptcha" id="g-recaptcha1"></div>
-						<button class="form__btn btn btn--form">Отправить заявку</button>
+						<input type="submit" class="form__btn btn btn--form" value="Отправить заявку">
 					</form>
 				</div>
 				<div class="callback__contacts contacts">
@@ -487,7 +487,7 @@
 							<input class="input input--modal" type="text" name="message">
 						</label>
 						<div class="g-recaptcha" id="g-recaptcha2"></div>
-						<button class="form__btn btn btn--form">Отправить заявку</button>
+						<input type="submit" class="form__btn btn btn--form" value="Отправить заявку">
 						<span class="modal__close"><span class="visually-hidden">Закрыть окно</span></span>
 		</form>
 		
