Исправил секцию с работами - теперь они inline-block вместо block

--- a/src/index.html
+++ b/src/index.html
@@ -177,6 +177,28 @@
 					     </div>
 					     <div class="projects__count-slide"></div>
 					</div>
+					<div class="projects__example">
+						 <div class="projects__slider">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_6.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_6.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_6.jpg" width="421" height="251" alt="">
+						 </div>
+						 <div class="projects__name">
+						 	Разработка логотипа промоутерской компании «Регион 150»
+					     </div>
+					     <div class="projects__count-slide"></div>
+					</div>
+					<div class="projects__example">
+						 <div class="projects__slider">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_6.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_6.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_6.jpg" width="421" height="251" alt="">
+						 </div>
+						 <div class="projects__name">
+						 	Разработка логотипа промоутерской компании «Регион 150»
+					     </div>
+					     <div class="projects__count-slide"></div>
+					</div>
 				</div>
 			</div>
 		</section>
